snowflake-id-generator/snowflake-id-generator/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ilmir
  labels:
    app: ilmir
  annotations:
    kubernetes.io/change-cause: "Update to 1.0.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ilmir
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 40%
      maxSurge: 30%
  template:
    metadata:
      labels:
        app: ilmir
    spec:
      containers:
        - name: snowflake
          image: myapp:1.0
          volumeMounts:
            - name: ilmir-config-volume
              mountPath: /config
              readOnly: true
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "500Gi"
          livenessProbe:
            httpGet:
              path: /management/health/liveness
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /management/health/readiness
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
      volumes:
        - name: ilmir-config-volume
          configMap:
            name: ilmir-config
