snowflake-id-generator/snowflake-id-generator/app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: ilmir
  labels:
    app: snowflake
spec:
  containers:
    - name: myapp
      image: myapp:1.0
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      livenessProbe:
        httpGet:
          path: /management/health/liveness
          port: 8080
        initialDelaySeconds: 15
        timeoutSeconds: 2
        periodSeconds: 20
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /management/health/readiness
          port: 8080
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 5
        failureThreshold: 3
        successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: ilmir-service
spec:
  selector:
    app: snowflake
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
