snowflake-id-generator/snowflake-id-generator/ilmir-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ilmir-service
spec:
  selector:
    app: ilmir
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
