snowflake-id-generator/snowflake-id-generator/ilmir-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ilmir-ingress
spec:
  ingressClassName: contour
  tls:
    - hosts:
      - snowflake.dev.local
      secretName: ilmir-tls
  rules:
  - host: snowflake.dev.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ilmir-service
              port:
                number: 80
